<resources>
    <string name="app_name">MJwenn</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="fname">Firstname</string>
    <string name="lname">Lastname</string>
    <string name="cardid">Card ID</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="tel">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="finish">Finish</string>
    <string name="type_ann">Announcement type</string>
    <string name="type_card">Card type</string>
    <string name="use_cur_location">Use my current location</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-type password</string>
    <string name="signup">Signup</string>
    <string name="pass_forgot">Forget password?</string>
    <string name="auth_failed">Auth failed</string>
    <string name="nofound">Announcement not found!</string>
    <string name="publish_date">Published on : %s</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="signout">logout</string>
    <string name="announcements">Announcements</string>
    <string name="action_main_account">Account</string>
    <string name="profile">Profile</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="remove">REMOVE</string>
    <string name="cancel">CANCEL</string>
    <string name="all">All</string>
    <string name="alerts">Alerts</string>
    <string name="filter">Filter</string>
    <string name="invite">Invite</string>
    <string name="invite_msg">Help your community through this great app, MJWENN. Click here : </string>
    <string name="password_must_match">Passwords must match</string>
    <string name="password_lenght">Passwords must be at least 6 characters lenght</string>
    <string name="email_too_short">Pseudo/Email trop court</string>
    <string name="password_too_short">Mot de passe trop court</string>
    <string name="search">Search</string>

    <string name="ads_app_id">ca-app-pub-7481900178921312/6035482787</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string-array name="countries">
        <item>HAITI</item>
        <item>USA</item>
        <item>CHILI</item>
        <item>FRANCE</item>
        <item>REP. DOMIN.</item>
    </string-array>

    <string-array name="regions">
        <item>OUEST</item>
    </string-array>

    <string-array name="types">
        <item>Announcement</item>
        <item>Alert</item>
    </string-array>

    <string-array name="cards">
        <item>PASSPORT</item>
        <item>BADGE</item>
    </string-array>


    <string name="title_activity_new_annoucement">Announcement</string>
    <string name="title_activity_login">Signin</string>
    <string name="title_activity_announcement">Announcement</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_profile_update">Profile</string>
</resources>
