<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kasik.mjwenn.views.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:text="@string/auth_failed"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#f00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_til_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp">

                <EditText
                    android:id="@+id/login_edt_pseudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:minHeight="30dp">

                <EditText
                    android:id="@+id/login_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/login_btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:background="@drawable/selector_btn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/login_tv_signup"
                android:text="@string/signup"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/login_tv_forgot"
                android:text="@string/pass_forgot"
                android:gravity="right"
                />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
