<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kasik.mjwenn.views.SignupActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_signup">


        <TextView
            android:id="@+id/signup_tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="10dp"
            android:text="@string/auth_failed"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="10dp"
            android:textColor="#f00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/region"
                    android:textStyle="bold"
                    android:textSize="17sp"/>
                <Spinner
                    android:id="@+id/signup_spi_country"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:entries="@array/countries" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:minHeight="30dp">

                <EditText
                    android:id="@+id/signup_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_til_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp">

                <EditText
                    android:id="@+id/signup_edt_pseudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:minHeight="30dp">

                <EditText
                    android:id="@+id/signup_edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_til_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:minHeight="30dp">

                <EditText
                    android:id="@+id/signup_edt_re__password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/signup_btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_signup"
            android:textColor="#fff"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:background="@drawable/selector_btn"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"/>




</LinearLayout>
