<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kasik.mjwenn.views.NewAnnoucement"
    tools:showIn="@layout/activity_new_annoucement">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/type_ann"
                android:visibility="gone"/>

            <Spinner
                android:id="@+id/new_ann_spi_type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/types"
                android:layout_marginBottom="5dp"
                android:background="@drawable/spinner_back"
                android:spinnerMode="dropdown"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="5dp"
                android:text="@string/type_card"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/new_ann_spi_card"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/spinner_back"
                android:entries="@array/cards" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_ann_til_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/new_ann_edt_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fname"
                    android:textSize="16sp"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_ann_til_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/new_ann_edt_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lname"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_ann_til_cardid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/new_ann_edt_cardid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cardid"
                    android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/contact"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/new_ann_spi_address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/types"
                android:layout_marginBottom="5dp"
                android:background="@drawable/spinner_back"
                android:spinnerMode="dropdown"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/new_ann_ll_address"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/new_ann_spi_country"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_back"
                        android:entries="@array/countries" />

                    <Spinner
                        android:id="@+id/new_ann_spi_region"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/spinner_back"
                        android:entries="@array/regions" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_ann_til_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/new_ann_edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_ann_til_tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/new_ann_edt_tel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tel"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_ann_til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/new_ann_edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_cur_location"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
